# haskell-book

./: .gitignore  .gitmodules  nixpkgs.nix  release.nix  shell.nix
addition/: addition.cabal
addition/src/: Addition.hs
hangman/: hangman.cabal
hangman/src/: Game.hs  Main.hs  Puzzle.hs  Words.hs
hangman/test/: Spec.hs
haskell-book/: haskell-book.cabal
haskell-book/benchmarks/: List.hs  ListVsMap.hs
haskell-book/cipher/: Main.hs
haskell-book/src/: Arith3Broken.hs  Example.hs  Expr.hs  FunctionWithLet.hs  FunctionWithWhere.hs  Main.hs  addadd.hs  changeMood.hs  datatis.hs  hwoo.hs  learn.hs  print2.hs  print3broken.hs  rvrs.hs  sing.hs  thirdletter.hs  toporlocal.hs  wriedwaxon.hs
haskell-book/src/Ch10/: DatabaseProcessing.hs  FibScan.hs  RewriteUsingFold.hs  WarmupAndReview.hs
haskell-book/src/Ch11/: AsPatterns.hs  BinaryTree.hs  Hutton.hs  LogicGoats.hs  Phone.hs  Programmers.hs  Vehicles.hs  Vigenere.hs
haskell-book/src/Ch12/: BinaryTree.hs  EitherLib.hs  MaybeLib.hs  Natural.hs  StringProcessing.hs  Unfolds.hs  ValidateTheWord.hs
haskell-book/src/Ch13/: Ciphers.hs  Palindrome.hs  Person.hs
haskell-book/src/Ch14/: Addition.hs  Ciphers.hs  Gens.hs  QuickCheck.hs  WordNumberTest.hs
haskell-book/src/Ch15/: Bull.hs  Exercises.hs  Laws.hs  Madness.hs  Mem.hs  Optional.hs
haskell-book/src/Ch16/: Exercises.hs  HeavyLifting.hs  Instances.hs
haskell-book/src/Ch17/: Combinations.hs  Constant.hs  Exercises.hs  Identity.hs  List.hs  Lookups.hs  Maybe.hs  Upper.hs  Validation.hs  ZipList.hs
haskell-book/src/Ch18/: Exercise.hs  Exercises.hs
haskell-book/src/Ch20/: Exercise.hs  Exercises.hs
haskell-book/src/Ch21/: Exercise.hs  Exercises.hs  SkiFree.hs  Tree.hs
haskell-book/src/Ch22/: Reader.hs  ReaderPractice.hs  WarmingUp.hs
haskell-book/src/Ch23/: Dies.hs  Exercises.hs  FizzBuzz.hs  Moi.hs
haskell-book/src/Ch24/: BT.hs  DOT.hs  Exercises.hs  Fractions.hs  IPAddress.hs  Ini.hs  LearnParsers.hs  LogFile.hs  Marshalling.hs
haskell-book/src/Ch25/: Bifunctor.hs  Compose.hs
haskell-book/src/Ch26/: EitherT.hs  Exercises.hs  MaybeT.hs  OuterInner.hs  ReaderT.hs  StateT.hs
haskell-book/src/Ch27/: Exercises.hs
haskell-book/src/Ch28/: Exercises.hs  Functor.hs
haskell-book/src/Ch29/: Ini.hs
haskell-book/src/Ch6/: Eq.hs  Excercise.hs  person.hs
haskell-book/src/Ch7/: Grabbag.hs
haskell-book/src/Ch8/: Example.hs  Exercise.hs  NumbersIntoWords.hs  WordNumber.hs
haskell-book/src/Ch9/: BottomMadness.hs  Cipher.hs  ComprehendThyLists.hs  EnumFromTo.hs  Exercise.hs  Exercises.hs  Filtering.hs  MoreBottoms.hs  PoemLines.hs  SquareCube.hs  Std.hs  ThyFearfulSymmetry.hs  Zipping.hs
hit-counter/: docker-compose.yml  hit-counter.cabal
hit-counter/app/: Main.hs
morse/: morse.cabal
morse/app/: Main.hs
morse/src/: Morse.hs
morse/test/: Spec.hs
nix/: addition.nix  hangman.nix  haskell-book.nix  hello.nix  hit-counter.nix  morse.nix  shawty.nix
shawty/: shawty.cabal
shawty/app/: Main.hs
