name:                addition
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Maxim Schuwalow
maintainer:          maxim.schuwalow@gmail.com
copyright:           2020 Maxim Schuwalow
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Addition
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       QuickCheck
  ghc-options:         -Wall -fwarn-tabs
