name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Maxim Schuwalow
maintainer:          maxim.schuwalow@gmail.com
copyright:           2020 Maxim Schuwalow
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_hangman,
                       Puzzle,
                       Words
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
