cabal-version:       2.4
name:                haskell-book
version:             0.0.0.1
license:             Apache-2.0
license-file:        LICENSE
author:              Maxim Schuwalow
maintainer:          maxim.schuwalow@gmail.com
extra-source-files:  README.md, CHANGELOG.md

library
  build-depends:       base ^>=4.12.0.0, time ^>= 1.8.0.2
  exposed-modules:     Example,
                       Learn,
                       Hwoo,
                       FunctionWithLet,
                       FunctionWithWhere,
                       ChangeMood
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-type-defaults
