cabal-version:       2.4
name:                haskell-book
version:             0.0.0.1
license:             Apache-2.0
license-file:        LICENSE
author:              Maxim Schuwalow
maintainer:          maxim.schuwalow@gmail.com
extra-source-files:  README.md, CHANGELOG.md

library
  build-depends:       base,
                       random,
                       transformers,
                       time,
                       containers,
                       either,
                       dlist,
                       trifecta,
                       hspec,
                       checkers,
                       QuickCheck,
                       bytestring,
                       text,
                       raw-strings-qq,
                       parsec,
                       attoparsec,
                       aeson,
                       ghc-prim,
                       parsers,
                       mtl
  exposed-modules:     Ch8.NumbersIntoWords,
                       Ch9.EnumFromTo,
                       Ch9.ThyFearfulSymmetry,
                       Ch9.PoemLines,
                       Ch9.ComprehendThyLists,
                       Ch9.SquareCube,
                       Ch9.BottomMadness,
                       Ch9.MoreBottoms,
                       Ch9.Filtering,
                       Ch9.Zipping,
                       Ch9.Exercises,
                       Ch9.Cipher,
                       Ch9.Std,
                       Ch10.DatabaseProcessing,
                       Ch10.FibScan,
                       Ch10.WarmupAndReview,
                       Ch10.RewriteUsingFold,
                       Ch11.Vehicles,
                       Ch11.LogicGoats,
                       Ch11.Programmers,
                       Ch11.BinaryTree,
                       Ch11.Vigenere,
                       Ch11.AsPatterns,
                       Ch11.Phone,
                       Ch11.Hutton,
                       Ch12.StringProcessing,
                       Ch12.ValidateTheWord,
                       Ch12.Natural,
                       Ch12.MaybeLib,
                       Ch12.EitherLib,
                       Ch12.Unfolds,
                       Ch12.BinaryTree,
                       Ch13.Ciphers,
                       Ch13.Palindrome,
                       Ch13.Person,
                       Ch14.Addition,
                       Ch14.WordNumberTest,
                       Ch14.QuickCheck,
                       Ch14.Gens,
                       Ch14.Ciphers,
                       Ch15.Optional,
                       Ch15.Madness,
                       Ch15.Bull,
                       Ch15.Laws,
                       Ch15.Exercises,
                       Ch15.Mem,
                       Ch16.HeavyLifting,
                       Ch16.Instances,
                       Ch16.Exercises,
                       Ch17.Lookups,
                       Ch17.Identity,
                       Ch17.Constant,
                       Ch17.Upper,
                       Ch17.List,
                       Ch17.ZipList,
                       Ch17.Validation,
                       Ch17.Exercises,
                       Ch17.Combinations,
                       Ch18.Exercises,
                       Ch20.Exercises,
                       Ch21.Exercises,
                       Ch21.SkiFree,
                       Ch21.Tree,
                       Ch22.WarmingUp,
                       Ch22.Reader,
                       Ch22.ReaderPractice,
                       Ch23.Dies,
                       Ch23.Moi,
                       Ch23.FizzBuzz,
                       Ch23.Exercises,
                       Ch24.LearnParsers,
                       Ch24.Fractions,
                       Ch24.Ini,
                       Ch24.BT,
                       Ch24.Marshalling,
                       Ch24.Exercises,
                       Ch24.LogFile,
                       Ch24.IPAddress,
                       Ch24.DOT,
                       Ch25.Bifunctor,
                       Ch25.Compose,
                       Ch26.MaybeT,
                       Ch26.EitherT,
                       Ch26.ReaderT,
                       Ch26.StateT,
                       Ch26.OuterInner,
                       Ch26.Exercises,
                       Ch27.Exercises
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Werror
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wno-type-defaults
                       -Wno-name-shadowing
