name:                hit-counter
version:             0.1.0.0
author:              mschuwalow
build-type:          Simple
cabal-version:       >=1.10

executable shawty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , mtl
                     , scotty
                     , text
                     , transformers
                     , containers
  default-language:    Haskell2010
