name:                shawty
version:             0.1.0.0
homepage:            http://github.com/bitemyapp/shawty#readme
author:              mschuwalow
build-type:          Simple
cabal-version:       >=1.10

executable shawty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010
